Filters and css-loaders

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-    <lista-filmes></lista-filmes>
+    <div class="container">
+        <lista-filmes></lista-filmes>
+    </div>
         
 </body>
 </html>
