Adiciona ui-router e cria rota para form e lista

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container">
-        <lista-filmes></lista-filmes>
+        <ui-view></ui-view>
     </div>
         
 </body>
