--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
         <ui-view></ui-view>
     </div>
         
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script> -->
 </body>
 </html>
